<resources>
    <string name="app_name">Csillagpont</string>

    <string name="title_activity_main_menu">MainMenu</string>
    <string name="main_menu_title">Főmenü</string>
    <string name="main_menu_options_settings">Beállítások</string>
    <string name="main_menu_options_logout">Kijelentkezés</string>

    <string name="main_menu_options_map">Térkép</string>
    <string name="main_menu_options_programs">Programok</string>
    <string name="main_menu_options_news">Hírek</string>
    <string name="main_menu_options_favourites">Kedvencek</string>

    <string name="main_menu_options_default_button">Random felugró szöveg</string>


    <string name="map_title">Térkép oldal</string>


    <string name="programs_title">Programok</string>


    <string name="news_title">Hírek oldal</string>


    <string name="favourites_title">Kedvencek oldal</string>
    <string name="title_activity_maps">Map</string>

    <string name="time_12am">00</string>
    <string name="time_1am">01</string>
    <string name="time_2am">02</string>
    <string name="time_3am">03</string>
    <string name="time_4am">04</string>
    <string name="time_5am">05</string>
    <string name="time_6am">06</string>
    <string name="time_7am">07</string>
    <string name="time_8am">08</string>
    <string name="time_9am">09</string>
    <string name="time_10am">10</string>
    <string name="time_11am">11</string>
    <string name="time_12pm">12</string>
    <string name="time_13pm">13</string>
    <string name="time_14pm">14</string>
    <string name="time_15pm">15</string>
    <string name="time_16pm">16</string>
    <string name="time_17pm">17</string>
    <string name="time_18pm">18</string>
    <string name="time_19pm">19</string>
    <string name="time_20pm">20</string>
    <string name="time_21pm">21</string>
    <string name="time_22pm">22</string>
    <string name="time_23pm">23</string>
    <string name="time_24pm">24</string>
    <string name="birth_day">I am going to birthday party</string>
    <string name="current_day_date">8 October, 2016</string>
    <string name="search">Keresés</string>
    <string name="title_activity_program_details">ProgramDetailsActivity</string>
    <string name="removed_from_favorites">Kedvencekből eltávolítva</string>
    <string name="add_to_favorites">Kedvencekhez adva</string>
    <string name="please_wait">Please wait</string>
    <string name="offline_mode">Offline mód</string>
    <string name="search_title">search title</string>
    <string name="search_hint">search_hint</string>

</resources>
