<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainMenu"
    tools:showIn="@layout/activity_main_menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <TextView
            android:id="@+id/main_menu_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/main_menu_title"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:orientation="horizontal"
            android:weightSum="100"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <Button
                android:id="@+id/main_menu_map_button"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_weight="50"
                android:layout_margin="10dp"
                android:text="@string/main_menu_options_map"
                android:textColor="#FFFFFF"
                android:background="#44B244" />

            <Button
                android:id="@+id/main_menu_programs_button"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_weight="50"
                android:layout_margin="10dp"
                android:text="@string/main_menu_options_programs"
                android:textColor="#FFFFFF"
                android:background="#2870D4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:orientation="horizontal"
            android:weightSum="100"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <Button
                android:id="@+id/main_menu_news_button"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_weight="50"
                android:layout_margin="10dp"
                android:text="@string/main_menu_options_news"
                android:textColor="#FFFFFF"
                android:background="#BA3636" />

            <Button
                android:id="@+id/main_menu_favourites_button"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_weight="50"
                android:layout_margin="10dp"
                android:text="@string/main_menu_options_favourites"
                android:textColor="#FFFFFF"
                android:background="#E39C1A" />
        </LinearLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>